add basic gui using qml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8.12)
 
 project(2048)
 
-#find_package(Qt5 REQUIRED)
+find_package(Qt5 COMPONENTS Quick Core)
+set(CMAKE_AUTOMOC ON)
 
 include_directories($CMAKE_SOURCE_DIR/src)
 
