--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,10 @@
-set(GAME_SOURCES main.cpp game.cpp)
+set(GAME_SOURCES main.cpp game.cpp gamemodel.cpp)
 
-add_executable(game ${GAME_SOURCES})
+qt5_add_resources(RESOURCES qml.qrc)
+
+add_executable(Game ${GAME_SOURCES} ${RESOURCES})
+
+target_link_libraries(Game PUBLIC
+    Qt5::Core
+    Qt5::Quick
+)
